--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                   <a class="nav-link" href="#shoes">Shoes</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#pricing">Pricing</a>
+                  <a class="nav-link" href="#backpack">Backpack</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#login">Login</a>
+                  <a class="nav-link" href="#subscribe">Subscribe</a>
                 </li>
               </ul>
             </div>
@@ -147,7 +147,7 @@
         <div class="card">
           <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Red Max</h5>
+            <h5 class="card-title">Red Airmax</h5>
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
             <h5>$350</h5>
@@ -157,7 +157,60 @@
       </div>
 
     </div>
+    
 
+    <div class="container" id="backpack">
+      <h3>Backpack</h3>
+      <div class="card-deck">
+        <div class="card">
+          <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Red Backpack</h5>
+            <h5>$125</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          </div>
+          <div class="card-footer">
+            <button class="buy-now-button">Buy Now >></button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Blue Backpack</h5>
+            <h5>$320</h5>
+            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+          </div>
+          <div class="card-footer">
+            <button class="buy-now-button">Buy Now >></button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Black Backpack</h5>
+            <h5>$169</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+          </div>
+          <div class="card-footer">
+            <button class="buy-now-button">Buy Now >></button>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+    <div class="container d-flex justify-content-center align-items-center orange-bg" id="subscribe">
+      <div>
+        <h3>LET`S STAY IN TOUCH</h3>
+        <h6>Get updates on sales special and more</h6>
+        <input class="form-control" type="text">
+        <button class="buy-now-button">Submit</button>
+      </div>
+    </div>
+
+    <footer>
+      <small>©copyright 2023. All rights reserved by panda commarce, Sofia, Bulgaria</small>
+    </footer>
 
 
 
